clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

a<b,>();c
// expected-error@-1 {{expected identifier}}
// expected-error@-2 {{expected template parameter}}
// expected-error@-3 {{expected ',' or '>' in template-parameter-list}}
// expected-error@-4 {{expected '>'}}
// expected-error@-5 {{unknown type name 'c'}}
// expected-error {{expected identifier or '('}}
